crates/ty_python_semantic/resources/mdtest/snapshots/classes.md_-_Generic_classes___PEP…_-_Diagnostics_for_bad_…_(cf706b07cf0ec31f).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: classes.md - Generic classes: PEP 695 syntax - Diagnostics for bad specializations
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/pep695/classes.md
---

# Python source files

## library.py

```
1 | class Bounded[T: str]:
2 |     x: T
3 | 
4 | class Constrained[U: (int, bytes)]:
5 |     x: U
```

## main.py

```
1 | from library import Bounded, Constrained
2 | 
3 | x: Bounded[int]  # error: [invalid-type-arguments]
4 | y: Constrained[str]  # error: [invalid-type-arguments]
```

# Diagnostics

```
error[invalid-type-arguments]: Type `int` is not assignable to upper bound `str` of type variable `T@Bounded`
 --> src/main.py:3:12
  |
3 | x: Bounded[int]  # error: [invalid-type-arguments]
  |            ^^^
  |
 ::: src/library.py:1:15
  |
1 | class Bounded[T: str]:
  |               - Type variable defined here
  |

```

```
error[invalid-type-arguments]: Type `str` does not satisfy constraints `int`, `bytes` of type variable `U@Constrained`
 --> src/main.py:4:16
  |
4 | y: Constrained[str]  # error: [invalid-type-arguments]
  |                ^^^
  |
 ::: src/library.py:4:19
  |
4 | class Constrained[U: (int, bytes)]:
  |                   - Type variable defined here
  |

```
